--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
 aiohttp==3.6.3
+appdirs==1.4.4
 async-timeout==3.0.1
 attrs==20.2.0
+certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 discord==1.0.1
 discord.py==1.5.0
+distlib==0.3.1
+filelock==3.0.12
 idna==2.10
 multidict==4.7.6
+pbr==5.5.0
+Pillow==8.0.0
 pycparser==2.20
 PyNaCl==1.3.0
+requests==2.24.0
 six==1.15.0
+stevedore==3.2.2
+urllib3==1.25.10
+virtualenv==20.0.34
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
 yarl==1.5.1
