--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 discord==1.0.1
-discord.py==1.5.0
+discord.py==1.5.1
 distlib==0.3.1
 filelock==3.0.12
 idna==2.10
@@ -23,3 +23,4 @@ virtualenv==20.0.34
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
 yarl==1.5.1
+youtube-dl==2020.9.20
